--- a/deriv-data-processor/package.json
+++ b/deriv-data-processor/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "server_api",
+  "name": "deriv-data-processor",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -10,12 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.19.2",
-    "cors": "^2.8.5",
-    "express": "^4.17.3",
-    "hash-it": "^5.0.2",
     "ioredis": "^4.28.5",
-    "node-fetch": "^3.2.2",
-    "node-redis-pubsub": "^5.0.0"
+    "ws": "^8.5.0"
   }
 }
